fix misalignment

--- a/src/app/components/MainContent/Skills/Skills.css
+++ b/src/app/components/MainContent/Skills/Skills.css
@@ -19,6 +19,7 @@
 
 .skills__option > * {
   width: 200px;
+  white-space: nowrap;
 }
 
 .skills__list {
